--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ASROOM Sp. z o.o. dziala na rynku od 2014r. Firma od początku stawiała na innowacyjność, ciągły rozwój i dobro klienta. Nieustannie podnosi swoje kwalifikacje, by swoim klientom oferować najoptymalniejsze rozwiązania rynkowe."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +27,7 @@
     <title>ASRoom.pl</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Włącz obsługę JavaScript, aby wyświetlić stronę/You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
